--- a/uknown_n1rumf.defender_auth.json
+++ b/uknown_n1rumf.defender_auth.json
@@ -1,16 +1,75 @@
 {
 	"_id": "uknown_n1rumf.defender_auth",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_n1rumf.defender_auth",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089627779,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569089687779,
+	"category": "dice_roller",
+	"last_update": 1569089627779,
+	"output": [
+		{
+			"args": {},
+			"calls": 10969,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"mited",
+				"MAJOR",
+				"source",
+				"onal s",
+				"oject ",
+				"apacit",
+				" that ",
+				"cultura",
+				"tural/pe",
+				"istorica"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"mited",
+						"MAJOR",
+						"source",
+						"onal s",
+						"oject ",
+						"apacit",
+						" that ",
+						"cultura",
+						"tural/pe",
+						"istorica"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"mited",
+				"MAJOR",
+				"source",
+				"onal s",
+				"oject ",
+				"apacit",
+				" that ",
+				"cultura",
+				"tural/pe",
+				"istorica"
+			]
 		}
 	]
 }
