--- a/unknown_43cjrs.box.json
+++ b/unknown_43cjrs.box.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_43cjrs.box",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_43cjrs.box",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089799160,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569089859160,
+	"category": "coin_flipper",
+	"last_update": 1569089799160,
+	"output": [
+		{
+			"args": {},
+			"calls": 4083,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"tructu",
+				"ic str",
+				"s puts ",
+				"This pu",
+				"erin ## ",
+				". This p"
+			],
+			"hits": [
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"tructu",
+						"ic str",
+						"s puts ",
+						"This pu",
+						"erin ## ",
+						". This p"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+			"frags": [
+				"tructu",
+				"ic str",
+				"s puts ",
+				"This pu",
+				"erin ## ",
+				". This p"
+			]
 		}
 	]
 }
