--- a/unknown_5umh34.private.json
+++ b/unknown_5umh34.private.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_5umh34.private",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_5umh34.private",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089808380,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569089868380,
+	"category": "plant_sim",
+	"last_update": 1569089808380,
+	"output": [
+		{
+			"args": {},
+			"calls": 762,
+			"base": "c:\"gmmxgj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"ot a ",
+				"There",
+				"s cons",
+				" not a",
+				" must ",
+				"sensus ",
+				"ria mus",
+				"aria mu"
+			],
+			"hits": [
+				{
+					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+					"frags": [
+						"ot a ",
+						"There",
+						"s cons",
+						" not a",
+						" must ",
+						"sensus ",
+						"ria mus",
+						"aria mu"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+			"frags": [
+				"ot a ",
+				"There",
+				"s cons",
+				" not a",
+				" must ",
+				"sensus ",
+				"ria mus",
+				"aria mu"
+			]
 		}
 	]
 }
