--- a/unknown_tg52f6.and_down_smash.json
+++ b/unknown_tg52f6.and_down_smash.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_tg52f6.and_down_smash",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_tg52f6.and_down_smash",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089869455,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569089929455,
+	"category": "coin_flipper",
+	"last_update": 1569089869455,
+	"output": [
+		{
+			"args": {},
+			"calls": 4453,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"e tim",
+				" ensu",
+				"in ens",
+				" inves",
+				"not hav",
+				"XCITING",
+				"K. We d",
+				"nvest th",
+				"ELY 'EXC"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"e tim",
+						" ensu",
+						"in ens",
+						" inves",
+						"not hav",
+						"XCITING",
+						"K. We d",
+						"nvest th",
+						"ELY 'EXC"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"e tim",
+				" ensu",
+				"in ens",
+				" inves",
+				"not hav",
+				"XCITING",
+				"K. We d",
+				"nvest th",
+				"ELY 'EXC"
+			]
 		}
 	]
 }
