--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -1,16 +1,57 @@
 {
 	"_id": "unknown_v4fsde.t3_clean",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_v4fsde.t3_clean",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089888853,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569089948853,
+	"category": "plant_sim",
+	"last_update": 1569089888853,
+	"output": [
+		{
+			"args": {},
+			"calls": 1177,
+			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"00\\n000",
+				" 0100 0",
+				"0000 000",
+				"0 0000\\n0"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"00\\n000",
+						" 0100 0",
+						"0000 000",
+						"0 0000\\n0"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"00\\n000",
+				" 0100 0",
+				"0000 000",
+				"0 0000\\n0"
+			]
 		}
 	]
 }
