--- a/unknown_yrfkx9.rotations.json
+++ b/unknown_yrfkx9.rotations.json
@@ -1,16 +1,76 @@
 {
 	"_id": "unknown_yrfkx9.rotations",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_yrfkx9.rotations",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089427927,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569089491556,
+	"edit": 2,
+	"scrape_ct": 20,
+	"next_scrape": 1569089487927,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569089427927,
+	"output": [
+		{
+			"args": {},
+			"calls": 1432,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion.",
+			"fragments": [
+				"143 F",
+				"7_FILE",
+				"difiers",
+				"\\nAD032",
+				"7A_SECT",
+				"79\\nAD0",
+				"heh heh\"\n\"i thank ye for ye doT0XF22.¨\n--th§ upkeeper"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"143 F",
+						"7_FILE",
+						"difiers",
+						"\\nAD032",
+						"7A_SECT",
+						"79\\nAD0"
+					]
+				},
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"heh heh\"\n\"i thank ye for ye doT0XF22.¨\n--th§ upkeeper"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"143 F",
+				"7_FILE",
+				"difiers",
+				"\\nAD032",
+				"7A_SECT",
+				"79\\nAD0"
+			]
+		},
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"heh heh\"\n\"i thank ye for ye doT0XF22.¨\n--th§ upkeeper"
+			]
 		}
 	]
 }
