--- a/uknown_i5argo.spec_search.json
+++ b/uknown_i5argo.spec_search.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_i5argo.spec_search",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "uknown_i5argo.spec_search",
 	"sector": "K_0542",
 	"sec_level": 4,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1569085645113
 		}
-	]
+	],
+	"updt": 1569085661801,
+	"edit": 1
 }
