--- a/uknown_xgmr0j.xfer.json
+++ b/uknown_xgmr0j.xfer.json
@@ -1,16 +1,66 @@
 {
 	"_id": "uknown_xgmr0j.xfer",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_xgmr0j.xfer",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569089698841,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569089758841,
+	"category": "fishie_tank",
+	"last_update": 1569089698841,
+	"output": [
+		{
+			"args": {},
+			"calls": 11304,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"0 0100",
+				"001 010",
+				"0000 00",
+				" 0100 00"
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1304,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"0 0100",
+				"001 010",
+				"0000 00",
+				" 0100 00"
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 4001,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"0 0100",
+				"001 010",
+				"0000 00",
+				" 0100 00"
+			]
 		}
 	]
 }
