--- a/unknown_w7dc99.pixels.json
+++ b/unknown_w7dc99.pixels.json
@@ -1,16 +1,43 @@
 {
 	"_id": "unknown_w7dc99.pixels",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_w7dc99.pixels",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569090401415,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1569090461415,
+	"category": "risk_factor",
+	"last_update": 1569090401415,
+	"output": [
+		{
+			"args": {},
+			"calls": 1839,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"e cha",
+				"it the",
+				"e it. ",
+				" the g",
+				" to hit",
+				"ance to ",
+				"'s take "
+			]
 		}
 	]
 }
