--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -1,16 +1,119 @@
 {
 	"_id": "anonymous_gbk0nx.premium_help",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "anonymous_gbk0nx.premium_help",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569090191240,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569090167363,
+	"edit": 2,
+	"scrape_ct": 17,
+	"next_scrape": 1569090251240,
+	"category": "clicker",
+	"last_update": 1569090191240,
+	"output": [
+		{
+			"args": {},
+			"calls": 7177,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"ST0X7",
+				"XBF_CL",
+				"ECT0XF2",
+				"_FILE0X2",
+				"MFT0XBF_",
+				"ILE0X2BC"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ST0X7",
+						"XBF_CL",
+						"ECT0XF2",
+						"_FILE0X2",
+						"MFT0XBF_",
+						"ILE0X2BC"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 8188,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"ST0X7",
+				"XBF_CL",
+				"ECT0XF2",
+				"_FILE0X2",
+				"MFT0XBF_",
+				"ILE0X2BC"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ST0X7",
+						"XBF_CL",
+						"ECT0XF2",
+						"_FILE0X2",
+						"MFT0XBF_",
+						"ILE0X2BC"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1060,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"ST0X7",
+				"XBF_CL",
+				"ECT0XF2",
+				"_FILE0X2",
+				"MFT0XBF_",
+				"ILE0X2BC"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ST0X7",
+						"XBF_CL",
+						"ECT0XF2",
+						"_FILE0X2",
+						"MFT0XBF_",
+						"ILE0X2BC"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"ST0X7",
+				"XBF_CL",
+				"ECT0XF2",
+				"_FILE0X2",
+				"MFT0XBF_",
+				"ILE0X2BC"
+			]
 		}
 	]
 }
