--- a/unknown_8a27qh.advert.json
+++ b/unknown_8a27qh.advert.json
@@ -1,16 +1,64 @@
 {
 	"_id": "unknown_8a27qh.advert",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_8a27qh.advert",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569090363820,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085661801,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "clean"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1569090423820,
+	"category": "fishie_tank",
+	"last_update": 1569090382576,
+	"output": [
+		{
+			"args": {},
+			"calls": 6881,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				" proc",
+				"i | SU",
+				"ex pro",
+				"ndari |",
+				"andari ",
+				"SUBJ: In",
+				" Index p"
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 757,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				" proc",
+				"i | SU",
+				"ex pro",
+				"ndari |",
+				"andari ",
+				"SUBJ: In",
+				" Index p"
+			]
 		}
 	]
 }
