--- a/uknown_gps5ec.u.json
+++ b/uknown_gps5ec.u.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_gps5ec.u",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_gps5ec.u",
 	"sector": "NGC_1025",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092199300,
 	"script_log": [
 		{
 			"type": "added",
@@ -23,8 +23,60 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092646506
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569092422726,
+	"edit": 6,
+	"scrape_ct": 19,
+	"next_scrape": 1569092259300,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092199300,
+	"output": [
+		{
+			"args": {},
+			"calls": 2666,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"FT0XB",
+				"ns\\n20",
+				"What h",
+				"E0X2BC7D",
+				"AD0320E3",
+				"0XBF_CLS",
+				"0E7 when"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"FT0XB",
+						"ns\\n20",
+						"What h",
+						"E0X2BC7D",
+						"AD0320E3",
+						"0XBF_CLS",
+						"0E7 when"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"FT0XB",
+				"ns\\n20",
+				"What h",
+				"E0X2BC7D",
+				"AD0320E3",
+				"0XBF_CLS",
+				"0E7 when"
+			]
+		}
+	]
 }
