--- a/uknown_i5argo.spec_search.json
+++ b/uknown_i5argo.spec_search.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_i5argo.spec_search",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_i5argo.spec_search",
 	"sector": "K_0542",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092290236,
 	"script_log": [
 		{
 			"type": "added",
@@ -23,8 +23,51 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092635916
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569092422726,
+	"edit": 5,
+	"scrape_ct": 20,
+	"next_scrape": 1569092350236,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092290236,
+	"output": [
+		{
+			"args": {},
+			"calls": 1767,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"000 01",
+				"000 00",
+				"00 0000",
+				"00\\n0000 "
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"000 01",
+						"000 00",
+						"00 0000",
+						"00\\n0000 "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"000 01",
+				"000 00",
+				"00 0000",
+				"00\\n0000 "
+			]
+		}
+	]
 }
