--- a/uknown_qm25wy.k3ys.json
+++ b/uknown_qm25wy.k3ys.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_qm25wy.k3ys",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_qm25wy.k3ys",
 	"sector": "NGC_1025",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092209415,
 	"script_log": [
 		{
 			"type": "added",
@@ -23,8 +23,60 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092646506
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569092422726,
+	"edit": 5,
+	"scrape_ct": 20,
+	"next_scrape": 1569092269415,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092209415,
+	"output": [
+		{
+			"args": {},
+			"calls": 1712,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"ing e",
+				"a for",
+				"cial wr",
+				"ng etc) ",
+				"ms (vide",
+				"ms (chat",
+				"editoria"
+			],
+			"hits": [
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						"ing e",
+						"a for",
+						"cial wr",
+						"ng etc) ",
+						"ms (vide",
+						"ms (chat",
+						"editoria"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				"ing e",
+				"a for",
+				"cial wr",
+				"ng etc) ",
+				"ms (vide",
+				"ms (chat",
+				"editoria"
+			]
+		}
+	]
 }
