--- a/uknown_semxxy.graph.json
+++ b/uknown_semxxy.graph.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_semxxy.graph",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_semxxy.graph",
 	"sector": "VNP_9534",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092169041,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,6 +21,51 @@
 			}
 		]
 	],
-	"updt": 1569087911517,
-	"edit": 2
+	"updt": 1569091746833,
+	"edit": 3,
+	"scrape_ct": 18,
+	"next_scrape": 1569092229041,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092169041,
+	"output": [
+		{
+			"args": {},
+			"calls": 3864,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"alil #",
+				"| bmaki",
+				"ELETE T",
+				"kilaaali",
+				"S | bmak",
+				"ETE THIS"
+			],
+			"hits": [
+				{
+					"document": "Passphrase",
+					"frags": [
+						"alil #",
+						"| bmaki",
+						"ELETE T",
+						"kilaaali",
+						"S | bmak",
+						"ETE THIS"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Passphrase",
+			"frags": [
+				"alil #",
+				"| bmaki",
+				"ELETE T",
+				"kilaaali",
+				"S | bmak",
+				"ETE THIS"
+			]
+		}
+	]
 }
