--- a/uknown_svndpj.specs.json
+++ b/uknown_svndpj.specs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_svndpj.specs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_svndpj.specs",
 	"sector": "NGC_1025",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092231811,
 	"script_log": [
 		{
 			"type": "added",
@@ -23,8 +23,57 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092646506
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569092422726,
+	"edit": 5,
+	"scrape_ct": 19,
+	"next_scrape": 1569092291811,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092231811,
+	"output": [
+		{
+			"args": {},
+			"calls": 2802,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"while",
+				" star",
+				"ng to ",
+				"started",
+				"ile his",
+				" us. | T"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"while",
+						" star",
+						"ng to ",
+						"started",
+						"ile his",
+						" us. | T"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				"while",
+				" star",
+				"ng to ",
+				"started",
+				"ile his",
+				" us. | T"
+			]
+		}
+	]
 }
