--- a/uknown_xru1sk.smash.json
+++ b/uknown_xru1sk.smash.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xru1sk.smash",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "uknown_xru1sk.smash",
 	"sector": "NGC_1069",
 	"sec_level": 2,
@@ -25,6 +25,6 @@
 			}
 		]
 	],
-	"updt": 1569091520723,
-	"edit": 2
+	"updt": 1569091746833,
+	"edit": 3
 }
