--- a/uknown_yr7sj1.bot_scam_do_not_run.json
+++ b/uknown_yr7sj1.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_yr7sj1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_yr7sj1.bot_scam_do_not_run",
 	"sector": "K_4785",
 	"sec_level": 2,
@@ -23,8 +23,12 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092635916
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 5
+	"updt": 1569091973004,
+	"edit": 7
 }
