--- a/unknown_ky881b.xfer.json
+++ b/unknown_ky881b.xfer.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_ky881b.xfer",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ky881b.xfer",
 	"sector": "VNP_9275",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092270371,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,6 +25,54 @@
 			}
 		]
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569091746833,
+	"edit": 4,
+	"scrape_ct": 19,
+	"next_scrape": 1569092330371,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092270371,
+	"output": [
+		{
+			"args": {},
+			"calls": 2898,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"hat s",
+				"I thi",
+				" ther",
+				"hink th",
+				"rity of ",
+				"he syste",
+				" of the "
+			],
+			"hits": [
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						"hat s",
+						"I thi",
+						" ther",
+						"hink th",
+						"rity of ",
+						"he syste",
+						" of the "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				"hat s",
+				"I thi",
+				" ther",
+				"hink th",
+				"rity of ",
+				"he syste",
+				" of the "
+			]
+		}
+	]
 }
