--- a/unknown_l412v6.o.json
+++ b/unknown_l412v6.o.json
@@ -1,10 +1,10 @@
 {
 	"_id": "unknown_l412v6.o",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "new",
 	"script": "unknown_l412v6.o",
 	"sector": "VNP_8380",
-	"sec_level": 4,
+	"sec_level": 2,
 	"date_added": 1569085645113,
 	"last_scraped": 0,
 	"script_log": [
@@ -15,8 +15,16 @@
 		{
 			"type": "died",
 			"when": 1569091512472
-		}
+		},
+		[
+			{
+				"type": "sec level change",
+				"when": 1569091768579,
+				"from": 2,
+				"to": 4
+			}
+		]
 	],
-	"updt": 1569085887045,
-	"edit": 1
+	"updt": 1569091520723,
+	"edit": 2
 }
