--- a/unknown_yuqh2v.loc.json
+++ b/unknown_yuqh2v.loc.json
@@ -1,10 +1,10 @@
 {
 	"_id": "unknown_yuqh2v.loc",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "could not json",
 	"script": "unknown_yuqh2v.loc",
 	"sector": "K_6458",
-	"sec_level": 4,
+	"sec_level": 2,
 	"date_added": 1566122447875,
 	"last_scraped": 0,
 	"script_log": [
@@ -15,8 +15,16 @@
 		{
 			"type": "died",
 			"when": 1569091321667
-		}
+		},
+		[
+			{
+				"type": "sec level change",
+				"when": 1569091808432,
+				"from": 2,
+				"to": 4
+			}
+		]
 	],
-	"updt": 1568686417352,
-	"edit": 4
+	"updt": 1569091973004,
+	"edit": 6
 }
