--- a/abndnd_suvkcr.release.json
+++ b/abndnd_suvkcr.release.json
@@ -1,16 +1,102 @@
 {
 	"_id": "abndnd_suvkcr.release",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "abndnd_suvkcr.release",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092602184,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569092662184,
+	"category": "dice_roller",
+	"last_update": 1569092602184,
+	"output": [
+		{
+			"args": {},
+			"calls": 9466,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"## go",
+				" brin",
+				"und ##",
+				"rns_ic",
+				"ould b",
+				" impre",
+				"o> ## g",
+				"pressed ",
+				"ing max "
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"## go",
+						" brin",
+						"und ##",
+						"rns_ic",
+						"o> ## g",
+						"pressed "
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"ould b"
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						" impre"
+					]
+				},
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						"ing max "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"## go",
+				" brin",
+				"und ##",
+				"rns_ic",
+				"o> ## g",
+				"pressed "
+			]
+		},
+		{
+			"document": "Proving/Children",
+			"frags": [
+				"ould b"
+			]
+		},
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
+				" impre"
+			]
+		},
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				"ing max "
+			]
 		}
 	]
 }
