--- a/uknown_gyuk8v.utils.json
+++ b/uknown_gyuk8v.utils.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_gyuk8v.utils",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_gyuk8v.utils",
 	"sector": "NGC_2868",
 	"sec_level": 2,
@@ -23,8 +23,12 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092646506
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 2
+	"updt": 1569091746833,
+	"edit": 3
 }
