--- a/uknown_sn8yh4.md5.json
+++ b/uknown_sn8yh4.md5.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_sn8yh4.md5",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_sn8yh4.md5",
 	"sector": "K_0542",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569092301985,
 	"script_log": [
 		{
 			"type": "added",
@@ -23,8 +23,60 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092635916
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 3
+	"updt": 1569092422726,
+	"edit": 5,
+	"scrape_ct": 20,
+	"next_scrape": 1569092361985,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569092301985,
+	"output": [
+		{
+			"args": {},
+			"calls": 1736,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"olves",
+				"s as 2",
+				" resolv",
+				"s 2.\\n21",
+				"K is >. ",
+				"56 it re",
+				" force c"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"olves",
+						"s as 2",
+						" resolv",
+						"s 2.\\n21",
+						"K is >. ",
+						"56 it re",
+						" force c"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"olves",
+				"s as 2",
+				" resolv",
+				"s 2.\\n21",
+				"K is >. ",
+				"56 it re",
+				" force c"
+			]
+		}
+	]
 }
