--- a/unknown_0qz0kr.db.json
+++ b/unknown_0qz0kr.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0qz0kr.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_0qz0kr.db",
 	"sector": "VNP_8704",
 	"sec_level": 2,
@@ -25,6 +25,6 @@
 			}
 		]
 	],
-	"updt": 1569091520723,
-	"edit": 5
+	"updt": 1569091746833,
+	"edit": 6
 }
