--- a/unknown_hnd65y.order.json
+++ b/unknown_hnd65y.order.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_hnd65y.order",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_hnd65y.order",
 	"sector": "K_0199",
 	"sec_level": 2,
@@ -23,8 +23,12 @@
 				"from": 2,
 				"to": 4
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569092635916
+		}
 	],
-	"updt": 1569091520723,
-	"edit": 5
+	"updt": 1569091746833,
+	"edit": 6
 }
