--- a/uknown_cak1xs.gib_gc.json
+++ b/uknown_cak1xs.gib_gc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_cak1xs.gib_gc",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_cak1xs.gib_gc",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094169740,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,60 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 4
+	"updt": 1569093323451,
+	"edit": 5,
+	"scrape_ct": 20,
+	"next_scrape": 1569094229740,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569094169740,
+	"output": [
+		{
+			"args": {},
+			"calls": 1196,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"i am ",
+				"d i a",
+				"respons",
+				"pretty ",
+				"ike inf",
+				"bly too",
+				"sonally ",
+				"ry, like",
+				"ly too m"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"i am ",
+						"d i a",
+						"respons",
+						"pretty ",
+						"ike inf",
+						"bly too",
+						"sonally ",
+						"ry, like",
+						"ly too m"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				"i am ",
+				"d i a",
+				"respons",
+				"pretty ",
+				"ike inf",
+				"bly too",
+				"sonally ",
+				"ry, like",
+				"ly too m"
+			]
+		}
+	]
 }
