--- a/uknown_qm25wy.k3ys.json
+++ b/uknown_qm25wy.k3ys.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_qm25wy.k3ys",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_qm25wy.k3ys",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569093930293,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,16 +37,16 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 6,
+	"updt": 1569093323451,
+	"edit": 7,
 	"scrape_ct": 20,
-	"next_scrape": 1569092269415,
+	"next_scrape": 1569093990293,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092209415,
+	"last_update": 1569093930293,
 	"output": [
 		{
 			"args": {},
-			"calls": 1712,
+			"calls": 2855,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"ing e",
