--- a/uknown_semxxy.graph.json
+++ b/uknown_semxxy.graph.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_semxxy.graph",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_semxxy.graph",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569093877528,
 	"script_log": [
 		{
 			"type": "added",
@@ -29,16 +29,16 @@
 			}
 		]
 	],
-	"updt": 1569092196705,
-	"edit": 4,
-	"scrape_ct": 18,
-	"next_scrape": 1569092229041,
+	"updt": 1569093323451,
+	"edit": 5,
+	"scrape_ct": 20,
+	"next_scrape": 1569093937528,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092169041,
+	"last_update": 1569093877528,
 	"output": [
 		{
 			"args": {},
-			"calls": 3864,
+			"calls": 5708,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"alil #",
