--- a/uknown_xru1sk.smash.json
+++ b/uknown_xru1sk.smash.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_xru1sk.smash",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_xru1sk.smash",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094139839,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,51 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 5
+	"updt": 1569093323451,
+	"edit": 6,
+	"scrape_ct": 20,
+	"next_scrape": 1569094199839,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569094139839,
+	"output": [
+		{
+			"args": {},
+			"calls": 1193,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"esign",
+				"ng an ",
+				"e trai",
+				". ## I",
+				" an AI",
+				"hinks li"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"esign",
+						"ng an ",
+						"e trai",
+						". ## I",
+						" an AI",
+						"hinks li"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"esign",
+				"ng an ",
+				"e trai",
+				". ## I",
+				" an AI",
+				"hinks li"
+			]
+		}
+	]
 }
