--- a/unknown_0qz0kr.db.json
+++ b/unknown_0qz0kr.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_0qz0kr.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_0qz0kr.db",
 	"sector": "HJG_5971",
 	"sec_level": 2,
 	"date_added": 1566710736006,
-	"last_scraped": 0,
+	"last_scraped": 1569093837435,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,57 @@
 			}
 		]
 	],
-	"updt": 1569093098160,
-	"edit": 8
+	"updt": 1569093323451,
+	"edit": 9,
+	"scrape_ct": 20,
+	"next_scrape": 1569093897435,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569093837435,
+	"output": [
+		{
+			"args": {},
+			"calls": 1366,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"ome p",
+				"you Io",
+				"bly WAS",
+				"bably W",
+				"STING O",
+				"ING OUR",
+				" wasn't",
+				"nd I hop"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"ome p",
+						"you Io",
+						"bly WAS",
+						"bably W",
+						"STING O",
+						"ING OUR",
+						" wasn't",
+						"nd I hop"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"ome p",
+				"you Io",
+				"bly WAS",
+				"bably W",
+				"STING O",
+				"ING OUR",
+				" wasn't",
+				"nd I hop"
+			]
+		}
+	]
 }
