--- a/unknown_ky881b.xfer.json
+++ b/unknown_ky881b.xfer.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_ky881b.xfer",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ky881b.xfer",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094008382,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,16 +37,16 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 6,
-	"scrape_ct": 19,
-	"next_scrape": 1569092330371,
+	"updt": 1569093323451,
+	"edit": 7,
+	"scrape_ct": 20,
+	"next_scrape": 1569094068382,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092270371,
+	"last_update": 1569094008382,
 	"output": [
 		{
 			"args": {},
-			"calls": 2898,
+			"calls": 4657,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"hat s",
