--- a/uknown_gps5ec.u.json
+++ b/uknown_gps5ec.u.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_gps5ec.u",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_gps5ec.u",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569093918714,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,16 +37,16 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 7,
-	"scrape_ct": 19,
-	"next_scrape": 1569092259300,
+	"updt": 1569093323451,
+	"edit": 8,
+	"scrape_ct": 18,
+	"next_scrape": 1569093978714,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092199300,
+	"last_update": 1569093918714,
 	"output": [
 		{
 			"args": {},
-			"calls": 2666,
+			"calls": 6636,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"FT0XB",
