--- a/uknown_sn8yh4.md5.json
+++ b/uknown_sn8yh4.md5.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_sn8yh4.md5",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_sn8yh4.md5",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094038718,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,16 +37,16 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 6,
+	"updt": 1569093323451,
+	"edit": 7,
 	"scrape_ct": 20,
-	"next_scrape": 1569092361985,
+	"next_scrape": 1569094098718,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092301985,
+	"last_update": 1569094038718,
 	"output": [
 		{
 			"args": {},
-			"calls": 1736,
+			"calls": 3498,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"olves",
