--- a/uknown_svndpj.specs.json
+++ b/uknown_svndpj.specs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_svndpj.specs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_svndpj.specs",
 	"sector": "NGC_9612",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569093960423,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,16 +37,16 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 6,
+	"updt": 1569093323451,
+	"edit": 7,
 	"scrape_ct": 19,
-	"next_scrape": 1569092291811,
+	"next_scrape": 1569094020423,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569092231811,
+	"last_update": 1569093960423,
 	"output": [
 		{
 			"args": {},
-			"calls": 2802,
+			"calls": 4574,
 			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
 			"fragments": [
 				"while",
