--- a/uknown_yr7sj1.bot_scam_do_not_run.json
+++ b/uknown_yr7sj1.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_yr7sj1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_yr7sj1.bot_scam_do_not_run",
 	"sector": "HJG_5971",
 	"sec_level": 2,
 	"date_added": 1565821273429,
-	"last_scraped": 0,
+	"last_scraped": 1569093606598,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,69 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 8
+	"updt": 1569093323451,
+	"edit": 9,
+	"scrape_ct": 20,
+	"next_scrape": 1569093666598,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569093606598,
+	"output": [
+		{
+			"args": {},
+			"calls": 1614,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"AD032",
+				"re act",
+				"ore ac",
+				"ST0X7A",
+				"BC7D17",
+				"B1 The",
+				"320B1 ",
+				"27_FIL",
+				"here is ",
+				"_FILE0X2",
+				"1 There ",
+				"D176\\nAD0"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"AD032",
+						"re act",
+						"ore ac",
+						"ST0X7A",
+						"BC7D17",
+						"B1 The",
+						"320B1 ",
+						"27_FIL",
+						"here is ",
+						"_FILE0X2",
+						"1 There ",
+						"D176\\nAD0"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"AD032",
+				"re act",
+				"ore ac",
+				"ST0X7A",
+				"BC7D17",
+				"B1 The",
+				"320B1 ",
+				"27_FIL",
+				"here is ",
+				"_FILE0X2",
+				"1 There ",
+				"D176\\nAD0"
+			]
+		}
+	]
 }
