--- a/unknown_4gqqp5.decrypt.json
+++ b/unknown_4gqqp5.decrypt.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_4gqqp5.decrypt",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_4gqqp5.decrypt",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094149167,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,51 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 5
+	"updt": 1569093323451,
+	"edit": 6,
+	"scrape_ct": 20,
+	"next_scrape": 1569094209167,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569094149167,
+	"output": [
+		{
+			"args": {},
+			"calls": 1099,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"wise.",
+				"ity.\\n",
+				"\\n2094 ",
+				"un other",
+				"therwise",
+				" What's "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"wise.",
+						"ity.\\n",
+						"\\n2094 ",
+						"un other",
+						"therwise",
+						" What's "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"wise.",
+				"ity.\\n",
+				"\\n2094 ",
+				"un other",
+				"therwise",
+				" What's "
+			]
+		}
+	]
 }
