--- a/unknown_yuqh2v.loc.json
+++ b/unknown_yuqh2v.loc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yuqh2v.loc",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_yuqh2v.loc",
 	"sector": "HJG_5971",
 	"sec_level": 2,
 	"date_added": 1566122447875,
-	"last_scraped": 0,
+	"last_scraped": 1569093637916,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,69 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 8
+	"updt": 1569093323451,
+	"edit": 9,
+	"scrape_ct": 20,
+	"next_scrape": 1569093697916,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569093637916,
+	"output": [
+		{
+			"args": {},
+			"calls": 1353,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"nal d",
+				"lic? ",
+				"i'll ",
+				"he sc",
+				"t's in",
+				"in my ",
+				"ake it",
+				" it to",
+				"al driv",
+				"it to th",
+				"'s in my",
+				"# okay, "
+			],
+			"hits": [
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"nal d",
+						"lic? ",
+						"i'll ",
+						"he sc",
+						"t's in",
+						"in my ",
+						"ake it",
+						" it to",
+						"al driv",
+						"it to th",
+						"'s in my",
+						"# okay, "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+			"frags": [
+				"nal d",
+				"lic? ",
+				"i'll ",
+				"he sc",
+				"t's in",
+				"in my ",
+				"ake it",
+				" it to",
+				"al driv",
+				"it to th",
+				"'s in my",
+				"# okay, "
+			]
+		}
+	]
 }
