--- a/unknown_yv2hdz.db.json
+++ b/unknown_yv2hdz.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yv2hdz.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_yv2hdz.db",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094160646,
 	"script_log": [
 		{
 			"type": "added",
@@ -37,6 +37,63 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 5
+	"updt": 1569093323451,
+	"edit": 6,
+	"scrape_ct": 20,
+	"next_scrape": 1569094220646,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1569094160646,
+	"output": [
+		{
+			"args": {},
+			"calls": 943,
+			"base": "\"ah. ye again.\nmy ol bones need a rest from extortion. ye come back termorrow.\"\n--the upkeeper",
+			"fragments": [
+				"nce t",
+				"erles",
+				"ng sin",
+				"enviro",
+				"ad its",
+				"a litt",
+				"ttle bi",
+				"o long ",
+				"akes me",
+				"onmental"
+			],
+			"hits": [
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"nce t",
+						"erles",
+						"ng sin",
+						"enviro",
+						"ad its",
+						"a litt",
+						"ttle bi",
+						"o long ",
+						"akes me",
+						"onmental"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"nce t",
+				"erles",
+				"ng sin",
+				"enviro",
+				"ad its",
+				"a litt",
+				"ttle bi",
+				"o long ",
+				"akes me",
+				"onmental"
+			]
+		}
+	]
 }
