--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -1,16 +1,86 @@
 {
 	"_id": "uknown_l21bqu.public",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_l21bqu.public",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094743258,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569094803258,
+	"category": "plant_sim",
+	"last_update": 1569094743258,
+	"output": [
+		{
+			"args": {},
+			"calls": 517,
+			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"scribe",
+				"hing\\\"",
+				" damag",
+				" 'Che'",
+				"nting \\",
+				"l descr",
+				"damenta"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"scribe",
+						"hing\\\"",
+						" 'Che'",
+						"nting \\",
+						"l descr"
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						" damag"
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						"damenta"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"scribe",
+				"hing\\\"",
+				" 'Che'",
+				"nting \\",
+				"l descr"
+			]
+		},
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				" damag"
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				"damenta"
+			]
 		}
 	]
 }
