--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_3ae6km.recruitment",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_3ae6km.recruitment",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095084104,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569095144104,
+	"category": "plant_sim",
+	"last_update": 1569095084104,
+	"output": [
+		{
+			"args": {},
+			"calls": 552,
+			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				" 'tra",
+				"st the",
+				"al: sh",
+				" betwe",
+				" qualit",
+				"ve disti",
+				"stablish",
+				"etween '"
+			],
+			"hits": [
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						" 'tra",
+						"st the",
+						"al: sh",
+						" betwe",
+						" qualit",
+						"ve disti",
+						"stablish",
+						"etween '"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				" 'tra",
+				"st the",
+				"al: sh",
+				" betwe",
+				" qualit",
+				"ve disti",
+				"stablish",
+				"etween '"
+			]
 		}
 	]
 }
