--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_yuqh2v.t1_scraper",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_yuqh2v.t1_scraper",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094892222,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569094900752,
+	"edit": 2,
+	"scrape_ct": 20,
+	"next_scrape": 1569094952222,
+	"category": "coin_flipper",
+	"last_update": 1569094892222,
+	"output": [
+		{
+			"args": {},
+			"calls": 9863,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"patter",
+				"onfirm",
+				"is, th",
+				"atic p",
+				"t its b",
+				"rn is c",
+				"ess by w",
+				", at its",
+				" contain"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"patter",
+						"onfirm",
+						"is, th",
+						"atic p",
+						"t its b",
+						"rn is c",
+						"ess by w",
+						", at its",
+						" contain"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"patter",
+				"onfirm",
+				"is, th",
+				"atic p",
+				"t its b",
+				"rn is c",
+				"ess by w",
+				", at its",
+				" contain"
+			]
 		}
 	]
 }
