--- a/derelict_880mzn.now.json
+++ b/derelict_880mzn.now.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_880mzn.now",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "derelict_880mzn.now",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -37,6 +37,6 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 4
+	"updt": 1569093323451,
+	"edit": 5
 }
