--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,16 +1,81 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095313870,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569095373870,
+	"category": "dice_roller",
+	"last_update": 1569095313870,
+	"output": [
+		{
+			"args": {},
+			"calls": 14706,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"t. ##",
+				"ory's",
+				"mp_gi",
+				"imes,",
+				"ecaus",
+				"diffe",
+				"s only ",
+				"reepy s",
+				"ners. M",
+				" ur cre",
+				"ws it. #",
+				"e all pr"
+			],
+			"hits": [
+				{
+					"document": "Prisoners",
+					"frags": [
+						"t. ##",
+						"ory's",
+						"mp_gi",
+						"imes,",
+						"ecaus",
+						"diffe",
+						"s only ",
+						"reepy s",
+						"ners. M",
+						" ur cre",
+						"ws it. #",
+						"e all pr"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Prisoners",
+			"frags": [
+				"t. ##",
+				"ory's",
+				"mp_gi",
+				"imes,",
+				"ecaus",
+				"diffe",
+				"s only ",
+				"reepy s",
+				"ners. M",
+				" ur cre",
+				"ws it. #",
+				"e all pr"
+			]
 		}
 	]
 }
