--- a/uknown_4yl1qa.bot_scam_do_not_run.json
+++ b/uknown_4yl1qa.bot_scam_do_not_run.json
@@ -1,16 +1,72 @@
 {
 	"_id": "uknown_4yl1qa.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_4yl1qa.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095016020,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569095076020,
+	"category": "dice_roller",
+	"last_update": 1569095016020,
+	"output": [
+		{
+			"args": {},
+			"calls": 4196,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"igned",
+				"h you",
+				"ives u",
+				"gned c",
+				"ready t",
+				"orps an",
+				"s and ge",
+				"- this l",
+				" your as"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"igned",
+						"h you",
+						"ives u",
+						"gned c",
+						"ready t",
+						"orps an",
+						"s and ge",
+						"- this l",
+						" your as"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				"igned",
+				"h you",
+				"ives u",
+				"gned c",
+				"ready t",
+				"orps an",
+				"s and ge",
+				"- this l",
+				" your as"
+			]
 		}
 	]
 }
