--- a/unknown_qmw1np.mpet.json
+++ b/unknown_qmw1np.mpet.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_qmw1np.mpet",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_qmw1np.mpet",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569094882561,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569094942561,
+	"category": "dice_roller",
+	"last_update": 1569094882561,
+	"output": [
+		{
+			"args": {},
+			"calls": 7631,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"wish ",
+				"we co",
+				"21D8 ",
+				"play\\n",
+				"Give m",
+				"e a dron",
+				"ms\\n21D9 ",
+				"arms\\n21D"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"wish ",
+						"we co",
+						"21D8 ",
+						"play\\n",
+						"Give m",
+						"e a dron",
+						"ms\\n21D9 ",
+						"arms\\n21D"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"wish ",
+				"we co",
+				"21D8 ",
+				"play\\n",
+				"Give m",
+				"e a dron",
+				"ms\\n21D9 ",
+				"arms\\n21D"
+			]
 		}
 	]
 }
