--- a/unknown_zpits8.bot_scam_do_not_run.json
+++ b/unknown_zpits8.bot_scam_do_not_run.json
@@ -1,16 +1,175 @@
 {
 	"_id": "unknown_zpits8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_zpits8.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095124001,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569085887045,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569095184001,
+	"category": "fishie_tank",
+	"last_update": 1569095124001,
+	"output": [
+		{
+			"args": {},
+			"calls": 8440,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"ms of",
+				"igital ",
+				"he term",
+				"e Frank",
+				"cted by",
+				"ly-prote",
+				"ed secur"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ms of",
+						"he term",
+						"e Frank",
+						"cted by",
+						"ly-prote",
+						"ed secur"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"igital "
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						"igital "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 694,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"ms of",
+				"igital ",
+				"he term",
+				"e Frank",
+				"cted by",
+				"ly-prote",
+				"ed secur"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ms of",
+						"he term",
+						"e Frank",
+						"cted by",
+						"ly-prote",
+						"ed secur"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"igital "
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						"igital "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 4999,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"ms of",
+				"igital ",
+				"he term",
+				"e Frank",
+				"cted by",
+				"ly-prote",
+				"ed secur"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ms of",
+						"he term",
+						"e Frank",
+						"cted by",
+						"ly-prote",
+						"ed secur"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"igital "
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						"igital "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ms of",
+				"he term",
+				"e Frank",
+				"cted by",
+				"ly-prote",
+				"ed secur"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"igital "
+			]
+		},
+		{
+			"document": "Erin File",
+			"frags": [
+				"igital "
+			]
 		}
 	]
 }
